sass/components: navs remove display block and fixed not showing sidebar and toc.

--- a/sass/components/_navs.scss
+++ b/sass/components/_navs.scss
@@ -11,7 +11,6 @@
 
 @media (max-width: 1000px) {
     .nav {
-        display: block;
         top: -0.25rem;
         border: none;
         bottom: 0;
@@ -19,7 +18,6 @@
         width: 50%;
         height: 100%;
         overflow-y: auto;
-        display: block;
         position: fixed;
         transition: transform 0.25s ease;
     &__close {
