--- a/sass/layouts/_sidebar.scss
+++ b/sass/layouts/_sidebar.scss
@@ -55,6 +55,7 @@
     margin-left: 0.5rem;
   }
   #sidebar {
+    display: block;
     left: 0;
     transform: translateX(-100%);
     &:target {
